Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNrMt6YHr2zVEkUKRyGFoRq",
+      "authorship_tag": "ABX9TyM+nGwFXm+brEVNFFSEqL4+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -704,10 +704,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "I2hrg56RJB8V",
-        "outputId": "6af5d4b9-5ff4-445c-8c9c-9b53a87f54dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6af5d4b9-5ff4-445c-8c9c-9b53a87f54dc"
       },
       "source": [
         "%%writefile variable04.cpp\n",
@@ -720,7 +720,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -735,15 +735,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "2bnagYq-FYvS",
-        "outputId": "ae04264e-52f1-42be-b81e-881e24048a86",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ae04264e-52f1-42be-b81e-881e24048a86"
       },
       "source": [
         "!g++ variable04.cpp -o variable04; ./variable04"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,10 +758,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "lLkTZSs1Fhyx",
-        "outputId": "f1a1eaaa-7869-46f1-df5f-c3ffe6589a40",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f1a1eaaa-7869-46f1-df5f-c3ffe6589a40"
       },
       "source": [
         "%%writefile variable05.cpp\n",
@@ -776,7 +776,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -791,15 +791,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "2l06UtFVJOCV",
-        "outputId": "11d22eb8-4e10-40ae-9bea-96b0d6cf2a03",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "11d22eb8-4e10-40ae-9bea-96b0d6cf2a03"
       },
       "source": [
         "!g++ variable05.cpp -o variable05; ./variable05"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -814,10 +814,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Q2pqnG9vJYlV",
-        "outputId": "53fc66ce-6447-4690-af8f-f88e33a47a9e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "53fc66ce-6447-4690-af8f-f88e33a47a9e"
       },
       "source": [
         "%%writefile variable06.cpp\n",
@@ -830,7 +830,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -845,15 +845,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "VJDodQp8Jgmd",
-        "outputId": "c3355e33-f321-4a2e-f6de-0dc620b8604d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c3355e33-f321-4a2e-f6de-0dc620b8604d"
       },
       "source": [
         "!g++ variable06.cpp -o variable06; ./variable06"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -868,10 +868,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "xV3cZma5LXxQ",
-        "outputId": "34f143f9-a248-4c7c-9b19-c7ebb5ddedda",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "34f143f9-a248-4c7c-9b19-c7ebb5ddedda"
       },
       "source": [
         "%%writefile variable07.cpp\n",
@@ -890,7 +890,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -905,15 +905,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "fNUgnO2GLcia",
-        "outputId": "51248142-ea62-48c1-c253-c0cb0b373a8f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "51248142-ea62-48c1-c253-c0cb0b373a8f"
       },
       "source": [
         "!g++ variable07.cpp -o variable07; ./variable07"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -928,22 +928,430 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IBCUbzB-L36Z"
+        "id": "IBCUbzB-L36Z",
+        "outputId": "78eda74b-e801-4644-9b50-b7b7f1ee52bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "%%writefile variable07.cpp\n",
+        "%%writefile variable08.cpp\n",
         "#include <iostream>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
         "  const int myNum = 15;\n",
-        "  myNum = 10;\n",
+        "  myNum = 10; // error: assignment of read-only variable 'myNum'\n",
         "  cout << myNum;\n",
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing variable08.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8j4PBhIF-H1S",
+        "outputId": "b7df6b24-9e39-4edf-87dc-c1d390c0d06b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ variable08.cpp -o variable08; ./variable08"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[01m\u001b[Kvariable08.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kint main()\u001b[m\u001b[K’:\n",
+            "\u001b[01m\u001b[Kvariable08.cpp:6:11:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[Kassignment of read-only variable ‘\u001b[01m\u001b[KmyNum\u001b[m\u001b[K’\n",
+            "   myNum = \u001b[01;31m\u001b[K10\u001b[m\u001b[K;\n",
+            "           \u001b[01;31m\u001b[K^~\u001b[m\u001b[K\n",
+            "/bin/bash: ./variable08: No such file or directory\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RLbtIfo3-ezx",
+        "outputId": "8fff8f82-10c9-4e80-9cdb-76f29d104376",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile variable09.cpp\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  const int minutesPerHour = 60;\n",
+        "  const float PI = 3.14;\n",
+        "  cout << minutesPerHour << \"\\n\";\n",
+        "  cout << PI;\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing variable09.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G5ydxV_O-jef",
+        "outputId": "3957409a-e5de-46d0-8ad4-e42373f422c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ variable09.cpp -o variable09; ./variable09"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "60\n",
+            "3.14"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3EaWIYtI-2JD"
+      },
+      "source": [
+        "# input\n",
+        "インプットについては、`cin` というのを使うが、Colab 環境ではやらない。\n",
+        "\n",
+        "次のような内容のファイルを実行すると、インプット待ちになってしまう。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d2mAJMYl_Gx3",
+        "outputId": "9e05a5cc-d1a2-4ab6-9ee7-0f612f6aec04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%script false\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int x, y;\n",
+        "  int sum;\n",
+        "  cout << \"Type a number: \";\n",
+        "  cin >> x;\n",
+        "  cout << \"Type another number: \";\n",
+        "  cin >> y;\n",
+        "  sum = x + y;\n",
+        "  cout << \"Sum is: \" << sum;\n",
+        "  return 0;\n",
+        "}"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing input01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UCTYi1Dk_sS4"
+      },
+      "source": [
+        "# データタイプ\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rfOWTWDY_3ND",
+        "outputId": "9a3ab5de-6b53-4fda-dcf2-417cc0f96ba9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile datatype01.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main () {\n",
+        "  // Creating variables\n",
+        "  int myNum = 5;               // Integer (whole number)\n",
+        "  float myFloatNum = 5.99;     // Floating point number\n",
+        "  double myDoubleNum = 9.98;   // Floating point number\n",
+        "  char myLetter = 'D';         // Character\n",
+        "  bool myBoolean = true;       // Boolean\n",
+        "  string myString = \"Hello\";   // String\n",
+        "   \n",
+        "  // Print variable values\n",
+        "  cout << \"int: \" << myNum << \"\\n\";\n",
+        "  cout << \"float: \" << myFloatNum << \"\\n\";\n",
+        "  cout << \"double: \" << myDoubleNum << \"\\n\";\n",
+        "  cout << \"char: \" << myLetter << \"\\n\";\n",
+        "  cout << \"bool: \" << myBoolean << \"\\n\";\n",
+        "  cout << \"string: \" << myString << \"\\n\";\n",
+        " \n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing datatype01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HqrUg7bf_8qW",
+        "outputId": "1677bf6a-b3cc-4393-f19c-cf8ef7b6a072",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ datatype01.cpp -o datatype01; ./datatype01"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "int: 5\n",
+            "float: 5.99\n",
+            "double: 9.98\n",
+            "char: D\n",
+            "bool: 1\n",
+            "string: Hello\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OWmRqKMBAQ4u",
+        "outputId": "c6ca4019-99a6-450f-f678-5f85d2a9c147",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile datatype02.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main () {\n",
+        "  float f1 = 35e3;\n",
+        "  double d1 = 12E4;\n",
+        "  cout << f1 << \"\\n\";\n",
+        "  cout << d1;\n",
+        "  return 0;\n",
+        "}"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting datatype02.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_14b2DtCAVpP",
+        "outputId": "0cb1e86d-b044-4737-dc86-f7e597430a53",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ datatype02.cpp -o datatype02; ./datatype02"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "35000\n",
+            "120000"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qb7ZiVjhApuT"
+      },
+      "source": [
+        "true は 1 で false は 0 。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W0AAUO0bAtxJ",
+        "outputId": "a0a4685f-df8c-489d-f53c-2994f88279a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile datatype03.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  bool isCodingFun = true;\n",
+        "  bool isFishTasty = false;\n",
+        "  cout << isCodingFun << \"\\n\";\n",
+        "  cout << isFishTasty;\n",
+        "  return 0;\n",
+        "}"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing datatype03.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-gl8iyL5Aym2",
+        "outputId": "b0512c07-e78c-43c1-b0c9-790e39217ea2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ datatype03.cpp -o datatype03; ./datatype03"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "0"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3IU5jEfcA-X-",
+        "outputId": "73241404-8745-402c-ec23-4a8f9327c20d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile datatype04.cpp\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main () {\n",
+        "  char myGrade = 'B';\n",
+        "  cout << myGrade;\n",
+        "  return 0;\n",
+        "}"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing datatype04.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NTCm8SvcBCd-",
+        "outputId": "7b3b7596-b46e-4ff3-a7b7-a2c9e765e022",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ datatype04.cpp -o datatype04; ./datatype04"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "B"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
