Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMNKxtGehIrJ36kBYN/68EI",
+      "authorship_tag": "ABX9TyOPnmz3UoKmQf2+mhvEGxaf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1766,7 +1766,10 @@
         "id": "gGDte4QOhHKR"
       },
       "source": [
-        "# いまここ 実験中\n"
+        "# いまここ 実験中\n",
+        "jikkenchu ni\n",
+        "\n",
+        "\n"
       ]
     }
   ]
