Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNkkth+2Sl+dk9cbzbzmUvl",
+      "authorship_tag": "ABX9TyPwdTZr0BOLbYkXwr4otcnI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1763,11 +1763,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Hpc2_pUod-fM",
-        "outputId": "c6582ca6-5b6c-4c1f-9c6e-f80128d29911",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Hpc2_pUod-fM",
+        "outputId": "c6582ca6-5b6c-4c1f-9c6e-f80128d29911"
       },
       "source": [
         "%%writefile assignment02.cpp\n",
@@ -1795,11 +1795,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Co6kI7K9eHMS",
-        "outputId": "bbde0830-50a6-400b-abc3-e5832e7c9a6d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Co6kI7K9eHMS",
+        "outputId": "bbde0830-50a6-400b-abc3-e5832e7c9a6d"
       },
       "source": [
         "!g++ assignment02.cpp -o assignment02; ./assignment02"
@@ -1827,11 +1827,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DoppkUDGfF7C",
-        "outputId": "47b0c5c9-a781-485e-bbf8-0b14eedf7dda",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DoppkUDGfF7C",
+        "outputId": "47b0c5c9-a781-485e-bbf8-0b14eedf7dda"
       },
       "source": [
         "import numpy as np\n",
@@ -1845,6 +1845,159 @@
           "text": [
             "101\n",
             "100\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3BUv3ygpf4rH",
+        "outputId": "1cce04c0-6c44-4007-e949-0435e318a49e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile assignment03.cpp\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int x = 5;\n",
+        "  x <<= 3;\n",
+        "  cout << x;\n",
+        "  return 0;\n",
+        "}"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing assignment03.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TJ1DijnqgAHr",
+        "outputId": "af951817-22a4-4415-9f6f-21c9d89de715",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ assignment03.cpp -o assignment03; ./assignment03"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "40"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WmsIyNL5gQP3"
+      },
+      "source": [
+        "5 は 2進数で 101 で、これを `<<` で 3桁左にずらすと 101000 になり、これは十進数で 40 である。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y0QS90DogHM8",
+        "outputId": "e18e3374-e61a-4500-f4ff-68310778c790",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(np.base_repr(5,2))\n",
+        "print(np.base_repr(40,2))"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "101\n",
+            "101000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WV8MmKZ6gqSw"
+      },
+      "source": [
+        "# 文字列 string\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JV2gT3iagztB",
+        "outputId": "3b9ee8be-483f-49a8-b92b-6c9d8350f665",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile string01.cpp\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  string greeting = \"Hello\";\n",
+        "  cout << greeting;\n",
+        "  return 0;\n",
+        "}"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing string01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "snL3f-Vrg5jt",
+        "outputId": "8d0e9b14-127f-4c5b-ba89-39d9983069de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ string01.cpp -o string01; ./string01"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello"
           ],
           "name": "stdout"
         }
