Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPqPz4lJP5sdZBCZHTH2EdK",
+      "authorship_tag": "ABX9TyNhCBuJwUZ2AR8rK/F4mCI/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2249,10 +2249,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "FYU0N2D1aO1t",
-        "outputId": "eea6208d-a5cb-4c3f-99d6-62682baea9cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "eea6208d-a5cb-4c3f-99d6-62682baea9cf"
       },
       "source": [
         "%%writefile string06.cpp\n",
@@ -2266,7 +2266,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2281,15 +2281,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "OvPgFoaHaTin",
-        "outputId": "9b9c6b10-e4bb-4ad1-8aee-70d74c8376a8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9b9c6b10-e4bb-4ad1-8aee-70d74c8376a8"
       },
       "source": [
         "!g++ string06.cpp -o string06; ./string06"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2304,10 +2304,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "N3yk1iHVaYc0",
-        "outputId": "faced729-aebe-4c62-ed84-c55bd2610662",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "faced729-aebe-4c62-ed84-c55bd2610662"
       },
       "source": [
         "%%writefile string07.cpp\n",
@@ -2322,7 +2322,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2337,15 +2337,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "iOu-_DX2akcc",
-        "outputId": "6d0c68a1-ae9a-4995-92a9-c08f8bb32355",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6d0c68a1-ae9a-4995-92a9-c08f8bb32355"
       },
       "source": [
         "!g++ string07.cpp -o string07; ./string07"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2396,6 +2396,76 @@
       "source": [
         "`cin >> firstName;` とすると、スペースで区切られたインプットを受け付けないので、`getline (cin, fullName);` とする。\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nGgjeu8CJ3zu"
+      },
+      "source": [
+        "ネームスペースのの省略\n",
+        "\n",
+        "```\n",
+        "using namespace std;\n",
+        "```\n",
+        "\n",
+        "を省略したときの書き方。 `::` をつける。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sq9Q97KdKH-M",
+        "outputId": "9010eedf-d7a6-4645-bd82-16ac4bb71e1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile nonamespace.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "\n",
+        "int main() {\n",
+        "  std::string greeting = \"Hello\";\n",
+        "  std::cout << greeting;\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing nonamespace.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zHB4UpcbKTGP",
+        "outputId": "84529583-c908-47ef-a19e-b0bd60dc49d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ nonamespace.cpp -o nonamespace; ./nonamespace"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
