--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPe5zdTfM6eYUWseV7in3u8",
+      "authorship_tag": "ABX9TyOaXNosweS2s69Tqlp9BDng",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3110,10 +3110,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ihhwaJtn4JMD",
-        "outputId": "303607db-caa3-45c3-efe7-c0e1754b7857",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "303607db-caa3-45c3-efe7-c0e1754b7857"
       },
       "source": [
         "%%writefile while01.cpp\n",
@@ -3129,7 +3129,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3144,15 +3144,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "zcOgtPoW4Jpz",
-        "outputId": "81725714-e978-4e42-c101-7467d0a60bb5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "81725714-e978-4e42-c101-7467d0a60bb5"
       },
       "source": [
         "!g++ while01.cpp -o while01; ./while01"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3171,10 +3171,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "kDVoKXM74eEN",
-        "outputId": "461438db-d1f5-4785-e2f7-bbe024ec3c73",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "461438db-d1f5-4785-e2f7-bbe024ec3c73"
       },
       "source": [
         "%%writefile while02.cpp\n",
@@ -3191,7 +3191,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3206,15 +3206,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "T5EZk3rj4dp_",
-        "outputId": "da36e31c-0f9d-4912-e77e-a7ef6a34029d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "da36e31c-0f9d-4912-e77e-a7ef6a34029d"
       },
       "source": [
         "!g++ while02.cpp -o while02; ./while02"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3233,10 +3233,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "mekcQLVJ5C21",
-        "outputId": "17ce2d30-8a29-4965-f6b3-92caa30d2afc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "17ce2d30-8a29-4965-f6b3-92caa30d2afc"
       },
       "source": [
         "%%writefile for01.cpp\n",
@@ -3250,7 +3250,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3265,15 +3265,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "vVMSUoTD5DWS",
-        "outputId": "3dbe5edc-69dc-4114-971b-004b1a5062b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3dbe5edc-69dc-4114-971b-004b1a5062b1"
       },
       "source": [
         "!g++ for01.cpp -o for01; ./for01"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3292,10 +3292,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "6B9Qb9kU5d75",
-        "outputId": "8565bbbc-ba1c-427c-a566-2a4e0d0856b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8565bbbc-ba1c-427c-a566-2a4e0d0856b8"
       },
       "source": [
         "%%writefile for02.cpp\n",
@@ -3309,7 +3309,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3324,15 +3324,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Xi5yv6sO5jx2",
-        "outputId": "2c401b50-50ee-4223-90e2-01aadc8ed9e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2c401b50-50ee-4223-90e2-01aadc8ed9e5"
       },
       "source": [
         "!g++ for02.cpp -o for02; ./for02"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3343,6 +3343,72 @@
             "6\n",
             "8\n",
             "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tRiVBXFL2rnC",
+        "outputId": "630a4c4a-f8dd-44f7-fc22-a72c19b4cab7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile breakcontinue.cpp\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  for (int i = 0; i < 10; i++) {\n",
+        "    if (i == 4) {\n",
+        "      continue;\n",
+        "    }\n",
+        "    cout << i << \"\\n\";\n",
+        "  }   \n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing breakcontinue.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "holEDCC520Dk",
+        "outputId": "d81c4c08-7b54-4bf1-a8b8-96408b1522de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ breakcontinue.cpp -o breakcontinue; ./breakcontinue"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
           ],
           "name": "stdout"
         }
