Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMA46VP13TwGgblRtklTXfq",
+      "authorship_tag": "ABX9TyNhpXKh7B1RJZhBJRM+l8cR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3417,7 +3417,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qf_0WEWnl4yx"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qf_0WEWnl4yx",
+        "outputId": "e8183f9c-e545-4305-9a17-d70d159d1dd8"
       },
       "source": [
         "%%writefile array01.cpp\n",
@@ -3432,19 +3436,348 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing array01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "e3onRGAemAhi"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e3onRGAemAhi",
+        "outputId": "5884bc69-8546-46e8-efea-0314be266d33"
       },
       "source": [
         "!g++ array01.cpp -o array01; ./array01"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Volvo"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JickdBaumMKJ",
+        "outputId": "467b6a90-ed3b-4771-a706-9816b8781631",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile array02.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  string cars[4] = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
+        "  cars[0] = \"Opel\";\n",
+        "  cout << cars[0];\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing array02.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xME08Ssamati",
+        "outputId": "cf1d4218-8898-435f-fd95-dc996d7a64bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ array02.cpp -o array02; ./array02"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Opel"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-8spDgtFmnW7",
+        "outputId": "37b40f82-6402-4dbe-d323-2e8d61fa0914",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile array03.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  string cars[4] = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
+        "  for(int i = 0; i < 4; i++) {\n",
+        "    cout << cars[i] << \"\\n\";\n",
+        "  }\n",
+        "  return 0;\n",
+        "}"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing array03.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jy8wA-48mq-n",
+        "outputId": "ce5e25fd-ca5d-4eea-eaa1-b0f66f58c1e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ array03.cpp -o array03; ./array03"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Volvo\n",
+            "BMW\n",
+            "Ford\n",
+            "Mazda\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nJ5zPLrsm1z1",
+        "outputId": "d25827b6-5f6d-4411-86f7-ebf000c782d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile array04.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "int main() {\n",
+        "  string cars[4] = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
+        "  for(int i = 0; i < 4; i++) {\n",
+        "    cout << i << \": \" << cars[i] << \"\\n\";\n",
+        "  }\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting array04.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BVbo7l6km5T1",
+        "outputId": "b0bb4346-2a00-4372-a594-f53ded392680",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ array04.cpp -o array04; ./array04"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0: Volvo\n",
+            "1: BMW\n",
+            "2: Ford\n",
+            "3: Mazda\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Sy8xPThGnpbg",
+        "outputId": "4c31f104-6515-42fd-ae26-5a5453c3d426",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile array05.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  string cars[5] = {\"Volvo\", \"BMW\", \"Ford\"};\n",
+        "  cars[3] = \"Mazda\";\n",
+        "  cars[4] = \"Tesla\";\n",
+        "  for(int i = 0; i < 5; i++) {\n",
+        "    cout << cars[i] << \"\\n\";\n",
+        "  }\n",
+        "  return 0;\n",
+        "}"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing array05.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GIVj0MYAnswK",
+        "outputId": "042b3701-56d8-4824-d8c8-39e94e16c46f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ array05.cpp -o array05; ./array05"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Volvo\n",
+            "BMW\n",
+            "Ford\n",
+            "Mazda\n",
+            "Tesla\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OSU6Fsxqn5Rs",
+        "outputId": "9a870099-e4cc-45aa-8a8c-8b3e7ba9507c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile array06.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  string cars[5];\n",
+        "  cars[0] = \"Volvo\";\n",
+        "  cars[1] = \"BMW\";\n",
+        "  cars[2] = \"Ford\";\n",
+        "  cars[3] = \"Mazda\";\n",
+        "  cars[4] = \"Tesla\";\n",
+        "  for(int i = 0; i < 5; i++) {\n",
+        "    cout << cars[i] << \"\\n\";\n",
+        "  }\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing array06.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T7JATf7Kn9d2",
+        "outputId": "d88b0a43-071f-450b-966a-c93c3ce22904",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ array06.cpp -o array06; ./array06"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Volvo\n",
+            "BMW\n",
+            "Ford\n",
+            "Mazda\n",
+            "Tesla\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
